# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  gendiff.py  generate_diff.py  lower_bool.py  parser_gendiff.py  read_file.py  stylish.py
gendiff/file_editing/: gendiff.py  generate_diff.py  read_file.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/results/: json_flat.txt  json_nested.txt
