[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Tata Pestova <tata.pestova@inbox.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
gendiff =  "gendiff.scripts.gendiff:main" 

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
